force-app/main/default/objects/Location__c/fields/PayWeek__c.field-meta.xml
<CustomField>
    <fullName>PayWeek__c</fullName>
    <label>Pay Week Ending Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PayWeek</valueSetName>
    </valueSet>
</CustomField>