force-app/main/default/objects/Location__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>