force-app/main/default/objects/Location__c/fields/Which_dates_of_week__c.field-meta.xml
<CustomField>
    <fullName>Which_dates_of_week__c</fullName>
    <label>Standard Working Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PayWeek</valueSetName>
    </valueSet>
</CustomField>