force-app/main/default/objects/Location__c/validationRules/GL_Account_Mandatory_Tax_Is_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Account_Mandatory_Tax_Is_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Tax__c &gt; 0 , GL_Code__c == Null , false)</errorConditionFormula>
    <errorDisplayField>GL_Code__c</errorDisplayField>
    <errorMessage>Please populate Tax Gl Account.</errorMessage>
</ValidationRule>