force-app/main/default/objects/Location__c/validationRules/Tax_should_not_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_should_not_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Tax__c &lt;0</errorConditionFormula>
    <errorMessage>Tax should be positive number</errorMessage>
</ValidationRule>